--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -18,6 +18,7 @@
   "components/intro",
   "components/materialize-form-colors",
   "components/navbar",
+  "components/prototype",
   "components/scroll-thingy",
   "components/skills",
   "components/work";
