fix broken style 360 images take off hover states on mobile (text should be always visible on mobile) take invision prototype off of mobile maybe take invision prototype off altogether if it won't work - get a new iframe/embed code and see if it changes anything update copy

--- a/styles/components/_prototype.scss
+++ b/styles/components/_prototype.scss
@@ -31,3 +31,10 @@
     // border: 3px solid lightgreen;
   }
 }
+
+.invision-prototype {
+  // 
+  // @include hover {
+  //   display: flex;
+  // };
+}
