--- a/styles/components/_case-studies.scss
+++ b/styles/components/_case-studies.scss
@@ -62,6 +62,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   // h3 {
   //   font-family: 'roboto condensed', sans-serif;
   //   text-transform: uppercase;
